# boltembedding

./: LICENSE  README.md  main.py  pyproject.toml
benchmarks/: __init__.py  benchmark.py
boltembedding/: __init__.py  core.py  distances.py  exceptions.py  types.py
boltembedding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_correctness.py  test_distances.py  test_exceptions.py
