[project]
name = "boltembedding"
version = "1.0.0"
description = "A production-ready, high-performance nearest neighbor embedding search library powered by JAX"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "BoltEmbedding Team"}
]
keywords = ["embeddings", "nearest-neighbor", "jax", "machine-learning", "search", "similarity"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "scikit-learn>=1.0.0",
]
benchmark = [
    "faiss-cpu>=1.7.0",
    "scikit-learn>=1.0.0",
]
cuda = [
    "jax[cuda12]>=0.4.0",
]
tpu = [
    "jax[tpu]>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
    "scikit-learn>=1.0.0",
    "faiss-cpu>=1.7.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["boltembedding*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "faiss-cpu>=1.13.2",
    "pytest>=9.0.2",
    "scikit-learn>=1.7.2",
]
